--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
- <!doctype html>
+<!doctype html>
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
@@ -23,8 +23,8 @@
 <meta property="og:title" content="Alibabaslot > Daftar Akun Gacor Server Luar Negri Banjir Perkalian Besar !!!">
 <meta property="og:type" content="website">
 <meta property="og:description" content="Alibabaslot adalah situs slot gacor online Alibabaslot terbaru dan terpercaya 2023 di Indonesia, yang menyediakan bonus new member 100% di awal TO kecil. Alibabaslot banyak peminat di karenakan situs Alibabaslot slot gacor yang merupakan situs penyedia deposit yang sangat murah hanya 5.000 saja serta via deposit paling lengkap anti ribet online 24jam serta Alibabaslot slot juga menyediakan deposit yang di proses sangat cepat sekali cukup menunggu 3menit saja sudah bisa lansung bermain Slot indo gacor mudah maxwin banjir cuan setiap hari di situs Alibabaslot.">
-<meta property="og:image" content="https://i.ibb.co/c1h1rWv/ad-cucu.png">
-  <meta property="og:image:secure_url" content="https://i.ibb.co/c1h1rWv/ad-cucu.png">
+<meta property="og:image" content="https://i.ibb.co/KyL7fQ3/bnbn.jpg">
+  <meta property="og:image:secure_url" content="https://i.ibb.co/KyL7fQ3/bnbn.jpg">
 
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="628"><meta name="twitter:card" content="summary_large_image">   
@@ -1485,7 +1485,7 @@ Item added to your cart
   style="--ratio: 1.0; --preview-ratio: 1.0;"
 >
   <noscript><div class="product__media media">
-        <img src="https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1946" alt="" srcset="https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=246 246w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=493 493w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=600 600w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=713 713w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=823 823w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=990 990w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1100 1100w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1206 1206w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1346 1346w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1426 1426w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1646 1646w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1946 1946w" width="1946" height="1946" loading="lazy" sizes="(min-width: 1200px) 605px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
+        <img src="https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1946" alt="" srcset="https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=246 246w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=493 493w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=600 600w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=713 713w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=823 823w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=990 990w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1100 1100w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1206 1206w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1346 1346w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1426 1426w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1646 1646w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1946 1946w" width="1946" height="1946" loading="lazy" sizes="(min-width: 1200px) 605px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
       </div></noscript>
 
   <modal-opener class="product__modal-opener product__modal-opener--image no-js-hidden" data-modal="#ProductModal-template--15255173988394__8cb507a7-ed93-4f8f-8cb6-d2aa79e576d0">
@@ -1519,7 +1519,7 @@ Item added to your cart
   </svg>
 </div>
 <div class="product__media media media--transparent">
-      <img src="https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1946" alt="" srcset="https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=246 246w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=493 493w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=600 600w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=713 713w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=823 823w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=990 990w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1100 1100w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1206 1206w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1346 1346w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1426 1426w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1646 1646w, https://i.ibb.co/c1h1rWv/ad-cucu.png&amp;width=1946 1946w" width="1946" height="1946" loading="lazy" class="image-magnify-lightbox" sizes="(min-width: 1200px) 605px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
+      <img src="https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1946" alt="" srcset="https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=246 246w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=493 493w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=600 600w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=713 713w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=823 823w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=990 990w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1100 1100w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1206 1206w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1346 1346w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1426 1426w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1646 1646w, https://i.ibb.co/KyL7fQ3/bnbn.jpg&amp;width=1946 1946w" width="1946" height="1946" loading="lazy" class="image-magnify-lightbox" sizes="(min-width: 1200px) 605px, (min-width: 990px) calc(55.0vw - 10rem), (min-width: 750px) calc((100vw - 11.5rem) / 2), calc(100vw / 1 - 4rem)">
     </div>
     <button class="product__media-toggle quick-add-hidden product__media-zoom-lightbox" type="button" aria-haspopup="dialog" data-media-id="23350582706218">
       <span class="visually-hidden">
@@ -1772,7 +1772,7 @@ Item added to your cart
   </details>
 </share-button>
 
-<p><a href="https://bla5.short.gy/seoladycuan"><img alt="" src="https://cdn.shopify.com/s/files/1/0678/6826/2646/files/1_KM5rXH514v2cFWTvIno7Iw_480x480.gif?v=1701906311"></a></p>
+<p><a href="https://tomat.jagungbaru.com/vip-lp3"><img alt="" src="https://i.ibb.co/51DTMLN/HPeIxwu.gif"></a></p>
 <a
             
               href="/products/slot-Alibabaslot"
@@ -1831,9 +1831,9 @@ Item added to your cart
     >
 <img
     class="global-media-settings global-media-settings--no-shadow"
-    srcset="https://i.ibb.co/c1h1rWv/ad-cucu.png 450w"
+    srcset="https://i.ibb.co/KyL7fQ3/bnbn.jpg 450w"
     sizes="(min-width: 750px) calc(100vw - 22rem), 1100px"
-    src="https://i.ibb.co/c1h1rWv/ad-cucu.png&width=1445"
+    src="https://i.ibb.co/KyL7fQ3/bnbn.jpg&width=1445"
     alt="Alibabaslot > Daftar Akun Gacor Server Luar Negri Banjir Perkalian Besar !!!"
     loading="lazy"
     width="1100"
