--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Alibabaslot adalah situs slot gacor online Alibabaslot terbaru dan terpercaya 2023 di Indonesia, yang menyediakan bonus new member 100% di awal TO kecil. Alibabaslot banyak peminat di karenakan situs Alibabaslot slot gacor yang merupakan situs penyedia deposit yang sangat murah hanya 5.000 saja serta via deposit paling lengkap anti ribet online 24jam serta Alibabaslot slot juga menyediakan deposit yang di proses sangat cepat sekali cukup menunggu 3menit saja sudah bisa lansung bermain Slot indo gacor mudah maxwin banjir cuan setiap hari di situs Alibabaslot." />
     <meta name="google-site-verification" content="l5v4b0d2h_27LeVSN_XJ9RsctO_56qAvOfryWXfCn9s" />
     <link rel="amphtml" href="https://ruangbagus.top/alibabaslot/">
-    <link rel="canonical" href="http://alibabaslot-online.xcodereleases.com/"><link rel="icon" type="image/png" href="https://i.ibb.co/z6M5dzJ/ALIBABASLOT.png"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
+    <link rel="canonical" href="http://alibabaslot-online.xcodereleases.com/"><link rel="icon" type="image/png" href="https://i.ibb.co/z6v8jXD/photo-2023-12-23-15-38-34.jpg"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       Alibabaslot > Daftar Akun Gacor Server Luar Negri Banjir Perkalian Besar !!!
 </title>
 
